[tool.poetry]
name = "H2O"
version = "0.1.0"
description = "H2O tools"
authors = ["Trygve Aspelien <trygveasp@met.no>", "Jostein Blyverket <josteinbl@met.no>", "Helene B Erlandsen <helenebe@met.no>"]

[tool.poetry.dependencies]
python = "^3.8"
cartopy = "^0.21.0"
# shapely = "^1.7.1"
rasterio = "^1.3.3"
geopandas = "^0.12.1"
pyflwdir = "^0.5.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
